# PLoc

./: CMakeLists.txt  README.md
Src/: CMakeLists.txt
Src/Debug/: Log.cpp  Log.h
Src/Localization/: DirectMethod.cpp  ElderMeadMethod.cpp  Localization.cpp  Localization.h  LocalizationTools.h  QPMethod.cpp  QuadMethod.cpp  VectorMethod.cpp
Src/Localization/Combiner/: Combiner.h  FilteredMeanCombiner.cpp  FilteredMeanCombiner.h  MassCombiner.cpp  MassCombiner.h  MeanCombiner.cpp  MeanCombiner.h  MedianCombiner.cpp  MedianCombiner.h  ParallelCombiner.cpp  ParallelCombiner.h  TimeDifferenceCombiner.cpp  TimeDifferenceCombiner.h  TimeSumCombiner.cpp  TimeSumCombiner.h  TriangleCombiner.cpp  TriangleCombiner.h
Src/Structures/Geometric/Points/: Point.h  SpherePoint.cpp  SpherePoint.h  TimePoint.h
Tests/: CMakeLists.txt  TestTools.cpp  TestTools.h  Tests.cpp
Tools/Modeling/: CMakeLists.txt  Experiment.cpp  Experiment.h  OptionParser.cpp  OptionParser.h  README.md  Report.h  main.cpp
Tools/Modeling/Examples/: FieldByQP.json  SignalByElderMead.json
Tools/Modeling/ResultVisualizationScripts/: LightningsDistanceHistogramMaker.py  LightningsTimeHistogramMaker.py  LocalizedSignalsVisualizator.py
Tools/Modeling/ResultVisualizationScripts/Src/: Lightning.py  LightningsHistograms.py
Tools/Modeling/Src/: Algorithm.h  CMakeLists.txt  ErrorGenerator.cpp  ErrorGenerator.h  Experimenter.cpp  Experimenter.h  FactoryFromJSON.h  main.cpp
Tools/Modeling/Src/Descriptions/: ExperimentDescription.h  ReportDescription.h
Tools/Modeling/Src/Executor/: ErrorGenerators.h  Executor.cpp  Executor.h  ExperimentResult.h  Factories.cpp  Factories.h
Tools/Modeling/Src/Parsers/: ExperimentJsonParse.cpp  ExperimentJsonParser.h  OptionParser.cpp  OptionParser.h
Tools/Modeling/Src/Report/: Report.cpp  Report.h
Tools/Modeling/Src2/: Algorithm.h  CMakeLists.txt  Combiner.h  Experimenter.cpp  Experimenter.h  FactoryFromJSON.cpp  Scene.h  main.cpp
